--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,19 +1,20 @@
+@import 'fonts';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 /* Table pagination: active page highlight */
 .mary-table-pagination span[aria-current="page"] > span {
-    @apply bg-primary text-base-100
+    @apply bg-primary text-base-100;
 }
 
 /* Table pagination: for dark mode*/
 .mary-table-pagination span[aria-disabled="true"] span {
-    @apply bg-inherit
+    @apply bg-inherit;
 }
 
 /* Table pagination: for dark mode */
 .mary-table-pagination button {
-    @apply bg-base-100
+    @apply bg-base-100;
 }
 
